# Search_string

./: CMakeLists.txt  README.md
include/: InvertedIndex.h  SearchServer.h  СonverterJSON.h
resources/: config.json  requests.json
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: test_invertedindex.cpp  test_searchserver.cpp
